src/styles/global.css
body {
  padding: 3%;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

*,
*:before,
*:after {
  transition: all 1s;
  box-sizing: border-box;
}

.calc-body {
  /* margin: 13vh auto; */
  /* box-shadow: 4px 18px 20px 3px #eee; */
  /* padding: 10px 20px; */
  height: fit-content;
  /* width: 30%; */
  max-width: 400px;
  /* overflow: overlay; */
  /* width: 300px; */
  border: solid 3px darkslategrey;
  border-radius: 10px;
  margin-top: 15vh;
  /*Align to middle*/
  margin-left: auto;
  margin-right: auto;
  padding: 5px;
}
.btn-cont {
  margin-left: auto;
  /* margin-top: 7rem; */
  margin-right: auto;
  padding: 6px;
  width: fit-content;
  border-radius: 5px;
  max-width: 360px;
}
.num-btn {
  /* padding: 1.5rem 2rem; */
  margin: 8px;
  height: 60px;
  width: 70px;
}
.num-btn:hover {
  background-color: #f3f3f3 !important;
}
.bg-light-grey {
  background-color: #f3f3f3;
}
.bg-light-grey:hover {
  background-color: #ffffff !important;
}

